# monkai.exe

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp  version.cpp
